--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,115 @@
-.App {
-  text-align: center;
+body {
+  /* margin: auto auto; */
+  margin: 0;
+  padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
+#root{
+  --large-font: 3rem;
+  --medium-font: 1.2rem;
+  --small-font: 0.9rem;
+  
+}
+
+.App {
+  letter-spacing: 1.5px;
+  text-align: center;
+  background-image: url("https://res.cloudinary.com/pacmankana/image/upload/v1542740935/url_shortener/url_shortener.jpg");
+  background-size: cover;
+  /* background-attachment: fixed; */
+  /* background-repeat: no-repeat; */
+
+}
+
+.content_container {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  background-color: rgba(0,0,0,0.7);
+
+}
+
+.content {
+
+  padding-top: 10px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  width: 90%;
+  font-family: 'Kodchasan', sans-serif;
+
 }
 
-input {
-  width: 300px;
+.content_title {
+  font-size: var(--large-font);
+  font-weight: bold;
+  padding: 10px;
+
+}
+
+.content_subtitle {
+padding: 10px;
+font-size: var(--medium-font);
+}
+
+button {
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+  font-size: var(--small-font);
+  font-weight: bold;
+}
+
+button:hover {
+  background: rgb(50,50,50);
+  color: white;
+  cursor: pointer;
+}
+
+textarea {
+  width: 80%;
+  max-width: 300px;
+  height: 20px;
+  font-size: var(--small-font);
+  color: black;
+}
+
+textarea:focus, button:focus {
+  outline: none;
+}
+
+.newUrlContent {
+  margin: 5px;
+}
+
+.newUrl_text {
+  font-size: var(--medium-font);
+  font-weight: bold;
+  padding: 10px;
+}
+
+.newUrl_url {
+  font-size: var(--medium-font);
+  color: inherit;
+}
+
+a{
+  color: rgb(185, 185, 247);
+}
+a:hover {
+  color: rgb(139, 139, 247);
+}
+
+@media (max-width: 800px){
+  #root{
+    --large-font: 2rem;
+    --medium-font: 1rem;
+    --small-font: 0.9rem;
+    
+  }
+.content_container {
+  width: 100%;
+}
 }
