--- a/src/styles.css
+++ b/src/styles.css
@@ -45,12 +45,20 @@ body {
   font-size: var(--medium-font);
 }
 
+.content_button {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
+}
+
 button {
+  text-align: center;
   padding: 10px;
   margin: 10px;
   border-radius: 5px;
-  font-size: var(--small-font);
+  font-size: 10px;
   font-weight: bold;
+  width: 80%;
 }
 
 button:hover {
@@ -61,8 +69,8 @@ button:hover {
 
 textarea {
   width: 80%;
-  max-width: 300px;
-  height: 20px;
+  /* max-width: 300px; */
+  height: 120px;
   font-size: var(--small-font);
   color: black;
 }
@@ -92,6 +100,12 @@ a {
 }
 a:hover {
   color: rgb(139, 139, 247);
+}
+
+.submit_button {
+  width: 70px;
+  align-self: flex-end;
+  margin-right: 10%;
 }
 
 @media (max-width: 800px) {
