--- a/src/styles.css
+++ b/src/styles.css
@@ -92,6 +92,8 @@ button:focus {
   font-size: var(--medium-font);
   font-weight: bold;
   padding: 10px;
+  width: 80%;
+  margin: auto auto;
 }
 
 .newUrl_url {
@@ -110,6 +112,8 @@ a:hover {
   width: 70px;
   align-self: flex-end;
   margin-right: 10%;
+  border-radius: 5px;
+
 }
 
 @media (max-width: 800px) {
